test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/unknown-generic.widl
interface FetchEvent : Event {
  ResponsePromise<any> default();
};
